Visual glitch in mobile menu overlapping solved

--- a/public/stylesheets/cochinero.css
+++ b/public/stylesheets/cochinero.css
@@ -142,7 +142,7 @@ textarea, select, input, button { outline: none; }
   font-size: 14px;
   font-weight: 500;
   padding: 0px 32px;
-  outline: none;
+  outline: none !important;
   margin: 0px 4px 4px 0px;
 }
 
