--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -33,6 +33,7 @@
   padding-top: 0px;
   text-align: center;
   transition: 0.4s;
+  z-index: 160;
 }
 
 #menu-box a{
